2007-08-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* src/applet.h: added new GConf path for connection settings.

	* src/gconf-helpers.[ch] (nm_gconf_get_stringlist_helper,
	nm_gconf_get_bytearray_helper): new helper functions.

	* src/applet-dbus-settings.[ch]: added implementation of the new
	configuration interface for the GConf-based applet.

	* src/Makefile.am: added new files.

2007-08-13  Tambet Ingo  <tambet@gmail.com>

	* configure.ac: libnm-glib just got renamed to libnm_glib.
	Add src/vpn-properties/Makefile to AC_OUTPUT.

	* src/Makefile.am: Add vpn-properties to SUBDIRS.

	* src/vpn-properties/*: Move it here from NetworkManager.

2007-08-09  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c (foo_wireless_state_change): Fix a memory corruption.
	

2007-07-26  Dan Williams  <dcbw@redhat.com>

	Patch from Claudio Saavedra <csaavedra@alumnos.utalca.cl>

	* src/other-network-dialog.c
		- Fix critical warning; gtk_widget_destroy already destroys the
			wireless adapter TreeModel (#438441)

2007-07-26  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* src/main.c
		- Kill usage of GnomeClient (#436832)

2007-07-26  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* src/applet.c
	  src/other-network-dialog.c
	  src/menu-items.c
	  configure.ac
		- Remove bits for GTK < 2.6 (#436832)

2007-06-27  Dan Williams  <dcbw@redhat.com>

	* Make SSIDs GByteArrays everywhere
	* Rename "essid" -> "ssid" everywhere that's appropriate

2007-06-22  Tambet Ingo  <tambet@ximian.com>

	* src/applet.c (nma_add_networks_helper): Fix a typo that caused crashes.

2007-06-21  Tambet Ingo  <tambet@ximian.com>

	* src/applet-dbus-info.c (nmi_dbus_get_key_for_network): Move the passphrase
	dialog creation to another function that is called from the main loop so that
	the "getKeyForNetwork" dbus call can return before the dialog asks a bunch of
	information over dbus.

2207-06-14  Christopher Aillon  <caillon@redhat.com>
