@@ -1,5 +1,10 @@
 2007-08-13  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* src/gconf-helpers.c:
+	* src/applet-dbus-settings.c: fixed some compilation problems.
+
+2007-08-13  Rodrigo Moya <rodrigo@gnome-db.org>
+
 	* src/applet.h: added new GConf path for connection settings.
 
 	* src/gconf-helpers.[ch] (nm_gconf_get_stringlist_helper,
